# Microservices

./: README.md
MessageMicroservice/: Cargo.toml  README.md
MessageMicroservice/docker/: Dockerfile-db
MessageMicroservice/src/: main.rs
MicroserviceCpp/: CMakeLists.txt  README.md
MicroserviceCpp/source/: main.cpp
ReditGo/: Readme.md
ReditRust/: Readme.md
WebSocketsChat/: ReadMe.md
WebSocketsChat/src/: main.rs
