[package]
name = "microservice_rs"
version = "0.1.0"
authors = ["lexkane"]


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

#![feature(proc_macro_hygiene)]
[dependencies]
log = "0.4.6"
env_logger = "0.6.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7.2"
futures = { version = "0.1.22", default-features = false }
hyper = "0.11.22"
diesel = { version = "1.4.2", features = ["postgres"] }
maud = "0.20.0"
